# omninexu-v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  pyproject.toml
.docker/: docker-compose.yml
.github/workflows/: ci.yml
deploy/: nginx-omninexu.conf  omninexu-crontab
migrations/: env.py
migrations/versions/: 45dc05600600_add_source_column_to_financial_facts.py  679f288c7b61_init.py  a1b2c3d4e5f6_add_source_filing_to_holdings.py  d8e8c9528f73_add_company_fk.py
scripts/ingest/: build_sp500_universe.py  download_13f.py  download_form4.py  download_history.py  download_sample.py  fill_edgar_zero_facts.py  import_gics.py  import_simfin.py  import_simfin_batch.py  seed_companies_batch.py  seed_snp500.py  sync_edgar_current.py  sync_fred.py
scripts/mcp/: demo_buyer.py
scripts/ops/: backup_db.py  cleanup_data.py  export_duckdb.py  migrate_data_layout.py  rotate_logs.py  scheduler.py
scripts/verify/: _common.py  batch.py  spotcheck.py  statistical.py  structural.py  verify_all.py  verify_context.py  verify_cross_source.py  verify_financials.py  verify_repository.py  verify_storage.py
scripts/x402/: buyer.py  test_all_endpoints.py
src/omninexu/: __init__.py
tests/: conftest.py  fakes.py
tests/api/: test_api.py  test_api_schema.py  test_middleware.py  test_stats.py  test_well_known.py  test_x402_middleware.py
tests/application/: test_company_context.py  test_confidence.py  test_cross_source.py  test_insider.py  test_insider_integration.py  test_institutional.py  test_peer_comparison.py  (+3 more)
(+179 files in other folders)
